--- a/springboot-mybatis/src/main/resources/application.properties
+++ b/springboot-mybatis/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/mybatis/
 
 #数据源
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.1.160:3306/springdatajpa?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://192.168.1.160:3306/chengxp?useUnicode=true&characterEncoding=utf-8
 spring.datasource.password=123456
 spring.datasource.username=root
 
@@ -19,3 +19,7 @@ pagehelper.support-methods-arguments=true
 # 默认值为pageNum=pageNum;pageSize=pageSize;count=countSql;reasonable=reasonable;pageSizeZero=pageSizeZero
 pagehelper.params=count=countSql
 pagehelper.page-size-zero=true
+
+
+mybatis.mapper-locations=classpath:/mybatis/mapper/*Mapper.xml
+mybatis.type-aliases-package=com.cxp.springbootmybatis.pojo
