--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>springboot-jpa</module>
         <module>springboot-mybatis</module>
         <module>springboot-elasticsearch</module>
+        <module>springboot-thymeleaf</module>
     </modules>
 
 </project>
