模板引擎使用

--- a/springboot-thymeleaf/src/main/resources/application.properties
+++ b/springboot-thymeleaf/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+server.port=8088
+server.servlet.context-path=/thymeleaf
+
+
+# 这个开发配置为false，避免改了模板还要重启服务器
+spring.thymeleaf.cache=false
+#这个是配置模板路径的，默认就是templates，可不用配置（默认值：classpath:/templates/）
+spring.thymeleaf.prefix=classpath:/templates/
+#检查模板位置是否正确（默认值:true）
+spring.thymeleaf.check-template-location=true
+#开启MVC Thymeleaf视图解析（默认值：true）
+spring.thymeleaf.enabled=true
+#模板编码
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
+#在构建URL时添加到视图名称后的后缀（默认值：.html）
+spring.thymeleaf.suffix=.html
+#静态资源文件
+spring.mvc.static-path-pattern=/static/**
+
 
