--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>springboot-mybatis</module>
         <module>springboot-elasticsearch</module>
         <module>springboot-thymeleaf</module>
+        <module>springboot2-filter</module>
     </modules>
 
 </project>
