springboot上传图片到本地路径,回传页面显示图片

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>springboot-elasticsearch</module>
         <module>springboot-thymeleaf</module>
         <module>springboot2-filter</module>
+        <module>springboot2-upload</module>
     </modules>
 
 </project>
