--- a/springboot-mybatis/pom.xml
+++ b/springboot-mybatis/pom.xml
@@ -60,6 +60,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- 通用Mapper -->
+		<dependency>
+			<groupId>tk.mybatis</groupId>
+			<artifactId>mapper-spring-boot-starter</artifactId>
+			<version>2.1.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
