--- a/springboot-mybatis/src/main/resources/application.properties
+++ b/springboot-mybatis/src/main/resources/application.properties
@@ -1,32 +1,1 @@
-server.port=8089
-server.servlet.context-path=/mybatis/
-
-#\u6570\u636E\u6E90
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.153.128:3306/springboot2-project?useUnicode=true&characterEncoding=utf-8
-spring.datasource.password=123456
-spring.datasource.username=root
-
-#\u5206\u9875\u63D2\u4EF6pagehelper
-##\u6307\u5B9A\u6570\u636E\u5E93\uFF0C\u4E0D\u6307\u5B9A\u7684\u8BDD\u4F1A\u9ED8\u8BA4\u81EA\u52A8\u68C0\u6D4B\u6570\u636E\u5E93\u7C7B\u578B
-pagehelper.helper-dialect = mysql
-#\u662F\u5426\u542F\u7528\u5206\u9875\u5408\u7406\u5316\u3002\u5982\u679C\u542F\u7528\uFF0C\u5F53pagenum<1\u65F6\uFF0C\u4F1A\u81EA\u52A8\u67E5\u8BE2\u7B2C\u4E00\u9875\u7684\u6570\u636E\uFF0C
-# \u5F53pagenum>pages\u65F6\uFF0C\u81EA\u52A8\u67E5\u8BE2\u6700\u540E\u4E00\u9875\u6570\u636E\uFF1B\u4E0D\u542F\u7528\u7684\uFF0C\u4EE5\u4E0A\u4E24\u79CD\u60C5\u51B5\u90FD\u4F1A\u8FD4\u56DE\u7A7A\u6570\u636E
-pagehelper.reasonable=true
-#\u9ED8\u8BA4\u503Cfalse\uFF0C\u5206\u9875\u63D2\u4EF6\u4F1A\u4ECE\u67E5\u8BE2\u65B9\u6CD5\u7684\u53C2\u6570\u503C\u4E2D\uFF0C\u81EA\u52A8\u6839\u636E params \u914D\u7F6E\u7684\u5B57\u6BB5\u4E2D\u53D6\u503C\uFF0C\u67E5\u627E\u5230\u5408\u9002\u7684\u503C\u65F6\u5C31\u4F1A\u81EA\u52A8\u5206\u9875
-pagehelper.support-methods-arguments=true
-#\u7528\u4E8E\u4ECE\u5BF9\u8C61\u4E2D\u6839\u636E\u5C5E\u6027\u540D\u53D6\u503C\uFF0C \u53EF\u4EE5\u914D\u7F6E pageNum,pageSize,count,pageSizeZero,reasonable\uFF0C\u4E0D\u914D\u7F6E\u6620\u5C04\u7684\u7528\u9ED8\u8BA4\u503C\uFF0C
-# \u9ED8\u8BA4\u503C\u4E3ApageNum=pageNum;pageSize=pageSize;count=countSql;reasonable=reasonable;pageSizeZero=pageSizeZero
-pagehelper.params=count=countSql
-pagehelper.page-size-zero=true
-
-
-mybatis.mapper-locations=classpath:/mybatis/mapper/*Mapper.xml
-mybatis.type-aliases-package=com.cxp.springbootmybatis.pojo
-
-spring.mvc.view.prefix=classpath:/templates/
-spring.mvc.view.suffix=.html
-#\u9759\u6001\u8D44\u6E90\u6587\u4EF6
-spring.mvc.static-path-pattern=/static/**
-
-
+spring.profiles.active=xml
