--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>springboot2-Jasypt</module>
         <module>springboot2-rsa-aes</module>
         <module>springboot2-cros</module>
+        <module>springboot2-shiro</module>
     </modules>
 
 </project>
