--- a/springboot2-websocket/src/main/resources/application.properties
+++ b/springboot2-websocket/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+server.port=8106
+server.servlet.context-path=/websocket
+
+# \u8FD9\u4E2A\u5F00\u53D1\u914D\u7F6E\u4E3Afalse\uFF0C\u907F\u514D\u6539\u4E86\u6A21\u677F\u8FD8\u8981\u91CD\u542F\u670D\u52A1\u5668
+spring.thymeleaf.cache=false
+#\u8FD9\u4E2A\u662F\u914D\u7F6E\u6A21\u677F\u8DEF\u5F84\u7684\uFF0C\u9ED8\u8BA4\u5C31\u662Ftemplates\uFF0C\u53EF\u4E0D\u7528\u914D\u7F6E\uFF08\u9ED8\u8BA4\u503C\uFF1Aclasspath:/templates/\uFF09
+spring.thymeleaf.prefix=classpath:/templates/
+#\u68C0\u67E5\u6A21\u677F\u4F4D\u7F6E\u662F\u5426\u6B63\u786E\uFF08\u9ED8\u8BA4\u503C:true\uFF09
+spring.thymeleaf.check-template-location=true
+#\u5F00\u542FMVC Thymeleaf\u89C6\u56FE\u89E3\u6790\uFF08\u9ED8\u8BA4\u503C\uFF1Atrue\uFF09
+spring.thymeleaf.enabled=true
+#\u6A21\u677F\u7F16\u7801
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
+#\u5728\u6784\u5EFAURL\u65F6\u6DFB\u52A0\u5230\u89C6\u56FE\u540D\u79F0\u540E\u7684\u540E\u7F00\uFF08\u9ED8\u8BA4\u503C\uFF1A.html\uFF09
+spring.thymeleaf.suffix=.html
+#\u9759\u6001\u8D44\u6E90\u6587\u4EF6
+spring.mvc.static-path-pattern=/static/**
+
+
 
