--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.6.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+
     <groupId>com.cxp</groupId>
     <artifactId>SpringBoot_Project</artifactId>
     <version>1.0-SNAPSHOT</version>
-
 
     <modules>
         <module>springboot-jpa</module>
@@ -24,6 +30,7 @@
         <module>springboot2-rsa-aes</module>
         <module>springboot2-cros</module>
         <module>springboot2-shiro</module>
+        <module>springboot2-actuator</module>
     </modules>
 
 </project>
