--- a/springboot2-cros/pom.xml
+++ b/springboot2-cros/pom.xml
@@ -14,6 +14,8 @@
     <description>Spring Boot跨域访问Cross-Origin Resource Sharing</description>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
     </properties>
 
