--- a/springboot2-actuator/src/main/resources/application.properties
+++ b/springboot2-actuator/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+server.port=8200
+server.servlet.context-path=/actuator
+
+#actuator\u7AEF\u53E3
+management.server.port=8200
+#\u4FEE\u6539\u8BBF\u95EE\u8DEF\u5F84  2.0\u4E4B\u524D\u9ED8\u8BA4\u662F/   2.0\u9ED8\u8BA4\u662F /actuator  \u53EF\u4EE5\u901A\u8FC7\u8FD9\u4E2A\u5C5E\u6027\u503C\u4FEE\u6539
+management.endpoints.web.base-path=/actuator
+#\u5F00\u653E\u6240\u6709\u9875\u9762\u8282\u70B9  \u9ED8\u8BA4\u53EA\u5F00\u542F\u4E86health\u3001info\u4E24\u4E2A\u8282\u70B9
+management.endpoints.web.exposure.include=*
+#\u663E\u793A\u5065\u5EB7\u5177\u4F53\u4FE1\u606F  \u9ED8\u8BA4NEVER\u4E0D\u4F1A\u663E\u793A\u8BE6\u7EC6\u4FE1\u606F,always\u4E00\u8D77\u663E\u793A\u4FE1\u606F,when_authorized\u8BA4\u8BC1\u7528\u6237\u624D\u663E\u793A\u4FE1\u606F
+management.endpoint.health.show-details=always
+#\u5F00\u542FPOST\u8BF7\u6C42\u8BBF\u95EE/actuator/shutdown\uFF0C\u53EF\u4EE5\u5173\u95ED\u5E94\u7528,\u9ED8\u8BA4\u662F\u5173\u95ED
+management.endpoint.shutdown.enabled=true
+
+
 
