--- a/springboot2-rabbitmq-xml/pom.xml
+++ b/springboot2-rabbitmq-xml/pom.xml
@@ -2,19 +2,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.6.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.cxp</groupId>
+        <artifactId>SpringBoot_Project</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <groupId>com.cxp</groupId>
     <artifactId>springboot2-rabbitmq-xml</artifactId>
     <name>springboot2-rabbitmq-xml</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
     <dependencies>
