--- a/springboot-mybatis/src/main/resources/application-xml.properties
+++ b/springboot-mybatis/src/main/resources/application-xml.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/mybatis/
 
 #\u6570\u636E\u6E90
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.153.128:3306/springboot2-project?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://192.168.150.128:3306/springboot2-project?useUnicode=true&characterEncoding=utf-8
 spring.datasource.password=123456
 spring.datasource.username=root
 
@@ -19,10 +19,11 @@ pagehelper.support-methods-arguments=true
 # \u9ED8\u8BA4\u503C\u4E3ApageNum=pageNum;pageSize=pageSize;count=countSql;reasonable=reasonable;pageSizeZero=pageSizeZero
 pagehelper.params=count=countSql
 pagehelper.page-size-zero=true
-
+mapper.mappers=com.cxp.springbootmybatis.xml.mapper.ClassesInfoMapper,com.cxp.springbootmybatis.xml.mapper.StudentInfoMapper
+mapper.not-empty=false
 
 mybatis.mapper-locations=classpath:/mybatis/mapper/*Mapper.xml
-mybatis.type-aliases-package=com.cxp.springbootmybatis.pojo
+mybatis.type-aliases-package=com.cxp.springbootmybatis.xml.pojo
 
 spring.mvc.view.prefix=classpath:/templates/
 spring.mvc.view.suffix=.html
