--- a/springboot2-jsp-shiro/pom.xml
+++ b/springboot2-jsp-shiro/pom.xml
@@ -82,6 +82,12 @@
 			<artifactId>jstl</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
