--- a/springboot2-mybatis-plus/src/main/resources/application-h2.yml
+++ b/springboot2-mybatis-plus/src/main/resources/application-h2.yml
@@ -11,3 +11,5 @@ spring:
 logging:
   level:
     com.cxp.springboot2mybatisplus: debug
+mybatis-plus:
+  mapper-locations: classpath*:/mapper/**/*.xml
