springboot2整合jsp，使用shiro，打war包

--- a/springboot2-jsp-shiro/src/main/resources/application.yml
+++ b/springboot2-jsp-shiro/src/main/resources/application.yml
@@ -1,12 +1,3 @@
-server:
-  port: 8088
-  servlet:
-    context-path: /
-    jsp:
-      init-parameters:
-        development: trur
 spring:
-  mvc:
-    view:
-      prefix: /WEB-INF/jsp/
-      suffix: .jsp
+  profiles:
+    active: h2
