--- a/springboot2-jsp-shiro/src/main/webapp/WEB-INF/web.xml
+++ b/springboot2-jsp-shiro/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,24 @@
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
+    <!-- 初始化spring容器 -->
+<!--    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>-->
+
+    <!--<filter>
+        <filter-name>shiroFilter</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+        <init-param>
+            <param-name>targetFilterLifecycle</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>shiroFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>-->
+
     <!-- Character Filter -->
     <filter>
         <filter-name>encodingFilter</filter-name>
