--- a/springboot2-shiro/src/main/resources/application-h2.yml
+++ b/springboot2-shiro/src/main/resources/application-h2.yml
@@ -24,3 +24,11 @@ spring:
 logging:
   level:
     com.cxp.springboot2shiro: debug
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    shutdown:
+      enabled: true
