springboot2项目中使用Sharding-jdbc实现分库分表

--- a/springboot2-shardingsphere/src/main/resources/application-splitdatabase.properties
+++ b/springboot2-shardingsphere/src/main/resources/application-splitdatabase.properties
@@ -22,14 +22,14 @@ spring.shardingsphere.enabled=true
 # \u7B2C\u4E00\u4E2A\u6570\u636E\u5E93
 sharding.jdbc.datasource.ds0.type=com.alibaba.druid.pool.DruidDataSource
 sharding.jdbc.datasource.ds0.driver-class-name=com.mysql.cj.jdbc.Driver
-sharding.jdbc.datasource.ds0.url=jdbc:mysql://192.168.8.101:3306/shrding1?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
+sharding.jdbc.datasource.ds0.url=jdbc:mysql://192.168.8.101:3306/sharding1?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
 sharding.jdbc.datasource.ds0.username=root
 sharding.jdbc.datasource.ds0.password=123456
 
 # \u7B2C\u4E8C\u4E2A\u6570\u636E\u5E93
 sharding.jdbc.datasource.ds1.type=com.alibaba.druid.pool.DruidDataSource
 sharding.jdbc.datasource.ds1.driver-class-name=com.mysql.cj.jdbc.Driver
-sharding.jdbc.datasource.ds1.url=jdbc:mysql://192.168.8.101:3306/shrding2?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
+sharding.jdbc.datasource.ds1.url=jdbc:mysql://192.168.8.101:3306/sharding2?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
 sharding.jdbc.datasource.ds1.username=root
 sharding.jdbc.datasource.ds1.password=123456
 
@@ -39,10 +39,10 @@ sharding.jdbc.config.sharding.default-database-strategy.inline.sharding-column=i
 sharding.jdbc.config.sharding.default-database-strategy.inline.algorithm-expression=ds$->{id % 2}
 
 # \u5206\u8868\u7B56\u7565 \u5176\u4E2Duser\u4E3A\u903B\u8F91\u8868 \u5206\u8868\u4E3B\u8981\u53D6\u51B3\u4E8Eage\u884C
-sharding.jdbc.config.sharding.tables.user.actual-data-nodes=ds$->{0..1}.user_$->{0..1}
+sharding.jdbc.config.sharding.tables.user.actual-data-nodes=ds$->{0..1}.user_info_$->{0..1}
 sharding.jdbc.config.sharding.tables.user.table-strategy.inline.sharding-column=age
 # \u5206\u7247\u7B97\u6CD5\u8868\u8FBE\u5F0F
-sharding.jdbc.config.sharding.tables.user.table-strategy.inline.algorithm-expression=user_$->{age % 2}
+sharding.jdbc.config.sharding.tables.user.table-strategy.inline.algorithm-expression=user_info_$->{age % 2}
 
 # \u4E3B\u952E UUID 18\u4F4D\u6570 \u5982\u679C\u662F\u5206\u5E03\u5F0F\u8FD8\u8981\u8FDB\u884C\u4E00\u4E2A\u8BBE\u7F6E \u9632\u6B62\u4E3B\u952E\u91CD\u590D
 #sharding.jdbc.config.sharding.tables.user.key-generator-column-name=id
