--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.6.RELEASE</version>
+        <version>2.1.8.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>com.cxp</groupId>
     <artifactId>SpringBoot_Project</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <modules>
         <module>springboot-jpa</module>
@@ -37,6 +38,10 @@
         <module>springboot2-kafka-basic</module>
         <module>springboo2-admin-server</module>
         <module>springboot2-netty</module>
+        <module>springboot2-jsp-shiro</module>
+        <module>springboot2-mybatis-plus</module>
+        <module>springboot2-shardingsphere</module>
+        <module>springboot2-webflux</module>
     </modules>
 
 </project>
