springboot2项目中使用websocket

--- a/springboot2-websocket/src/main/resources/application.properties
+++ b/springboot2-websocket/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8106
-server.servlet.context-path=/websocket
+server.servlet.context-path=/
 
 # \u8FD9\u4E2A\u5F00\u53D1\u914D\u7F6E\u4E3Afalse\uFF0C\u907F\u514D\u6539\u4E86\u6A21\u677F\u8FD8\u8981\u91CD\u542F\u670D\u52A1\u5668
 spring.thymeleaf.cache=false
@@ -18,4 +18,6 @@ spring.thymeleaf.suffix=.html
 spring.mvc.static-path-pattern=/static/**
 
 
+context.initializer.classes=com.cxp.springboot2websocket.config.MyApplicationContextInitalizer
 
+logging.level.com.cxp.springboot2websocket=debug
