springboot2项目中使用网络爬虫框架WebMagic

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <module>springboot2-mybatis-plus</module>
         <module>springboot2-shardingsphere</module>
         <module>springboot2-webflux</module>
+        <module>springboot2-webmagic</module>
     </modules>
 
 </project>
