--- a/springboot-jpa/pom.xml
+++ b/springboot-jpa/pom.xml
@@ -7,8 +7,10 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.3.RELEASE</version>
     </parent>
+
     <artifactId>springboot-jpa</artifactId>
     <name>springboot-jpa</name>
+    <packaging>jar</packaging>
     <description>Demo project for Spring Boot</description>
 
     <properties>
