--- a/springboot2-multidatasource/pom.xml
+++ b/springboot2-multidatasource/pom.xml
@@ -2,15 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.6.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.cxp</groupId>
+        <artifactId>SpringBoot_Project</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>com.cxp</groupId>
+
     <artifactId>springboot2-multidatasource</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>springboot2-multidatasource</name>
     <description>Spring Boot中使用多数据源</description>
 
