--- a/springboot2-websocket/pom.xml
+++ b/springboot2-websocket/pom.xml
@@ -61,7 +61,11 @@
             <version>2.5.1</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.53</version>
+        </dependency>
 
     </dependencies>
 
