--- a/springboot2-jsp-shiro/pom.xml
+++ b/springboot2-jsp-shiro/pom.xml
@@ -113,6 +113,39 @@
 
 	</dependencies>
 
+
+	<profiles>
+		<profile>
+			<!-- 本地开发环境 -->
+			<id>h2</id>
+			<properties>
+				<profiles.active>h2</profiles.active>
+				<modifier></modifier>
+			</properties>
+			<activation>
+				<!-- 默认的，不加参数时执行这个profile -->
+				<activeByDefault>true</activeByDefault>
+			</activation>
+		</profile>
+		<profile>
+			<!-- 测试环境 -->
+			<id>test</id>
+			<properties>
+				<profiles.active>test</profiles.active>
+				<modifier>-test</modifier>
+			</properties>
+		</profile>
+		<profile>
+			<!-- 生产环境 -->
+			<id>prod</id>
+			<properties>
+				<profiles.active>prod</profiles.active>
+				<modifier>-prod</modifier>
+			</properties>
+		</profile>
+	</profiles>
+
+
 	<build>
 		<plugins>
 			<plugin>
@@ -120,6 +153,23 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>false</filtering>
+				<excludes>
+					<exclude>application-*.yml</exclude>
+				</excludes>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+				<excludes>
+					<exclude>application-{profiles.active}.yml</exclude>
+				</excludes>
+			</resource>
+		</resources>
 	</build>
 
 </project>
