--- a/springboot2-websocket/src/main/resources/application.properties
+++ b/springboot2-websocket/src/main/resources/application.properties
@@ -17,7 +17,8 @@ spring.thymeleaf.suffix=.html
 #\u9759\u6001\u8D44\u6E90\u6587\u4EF6
 spring.mvc.static-path-pattern=/static/**
 
-
+#\u53C2\u8003:https://www.cnblogs.com/duanxz/p/11239291.html
+#DelegatingApplicationContextInitializer\u4F7F\u7528\u73AF\u5883\u5C5E\u6027context.initializer.classes\u6307\u5B9A\u7684\u521D\u59CB\u5316\u5668(initializers)\u8FDB\u884C\u521D\u59CB\u5316\u5DE5\u4F5C\uFF0C\u5982\u679C\u6CA1\u6709\u6307\u5B9A\u5219\u4EC0\u4E48\u90FD\u4E0D\u505A
 context.initializer.classes=com.cxp.springboot2websocket.config.MyApplicationContextInitalizer
 
 logging.level.com.cxp.springboot2websocket=debug
