--- a/springboot2-webflux/pom.xml
+++ b/springboot2-webflux/pom.xml
@@ -4,13 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.5.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>com.cxp</groupId>
+		<artifactId>SpringBoot_Project</artifactId>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
 
-	<groupId>com.cxp</groupId>
 	<artifactId>springboot2-webflux</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>springboot2-webflux</name>
@@ -18,6 +16,8 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 
 	<dependencies>
