--- a/SpringBoot2-WebSocket-Project/springboot2-websocket/pom.xml
+++ b/SpringBoot2-WebSocket-Project/springboot2-websocket/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>com.cxp</groupId>
-        <artifactId>SpringBoot_Project</artifactId>
+        <artifactId>SpringBoot2-WebSocket-Project</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -37,11 +37,13 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
