--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,6 @@
         <module>springboot2-filter</module>
         <module>springboot2-upload</module>
         <module>springboot2-redis</module>
-        <module>springboot2-websocket</module>
         <module>springboot2-rabbitmq</module>
         <module>springboot2-rabbitmq-xml</module>
         <module>springboot2-Jasypt</module>
@@ -45,6 +44,9 @@
         <module>springboot2-webmagic</module>
         <module>springboot2-netty-websocket</module>
         <module>springboot2-quartz</module>
+        <module>springboot-h2-database</module>
+        <module>springboot2-spring-session</module>
+        <module>SpringBoot2-WebSocket-Project</module>
     </modules>
 
 </project>
