springboot2项目添加spring-session支持实现session共享

--- a/springboot2-spring-session/pom.xml
+++ b/springboot2-spring-session/pom.xml
@@ -18,6 +18,8 @@
   <modules>
       <module>springboot2-spring-session-redis</module>
       <module>springboot2-spring-session-redis-two</module>
+      <module>springboot2-spring-session-websocket</module>
+      <module>springboot2-spring-session-jdbc</module>
   </modules>
 
   <properties>
