--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,6 @@
         <module>springboot-thymeleaf</module>
         <module>springboot2-filter</module>
         <module>springboot2-upload</module>
-        <module>springboot2-redis</module>
         <module>springboot2-rabbitmq</module>
         <module>springboot2-rabbitmq-xml</module>
         <module>springboot2-Jasypt</module>
@@ -32,7 +31,6 @@
         <module>springboot2-cros</module>
         <module>springboot2-shiro</module>
         <module>springboot2-actuator</module>
-        <module>springboot2-zookeeper</module>
         <module>springboot2-kafka</module>
         <module>springboot2-kafka-basic</module>
         <module>springboo2-admin-server</module>
@@ -48,6 +46,8 @@
         <module>springboot2-spring-session</module>
         <module>SpringBoot2-WebSocket-Project</module>
         <module>springboot2-mongodb</module>
+        <module>springboo2-zookeeper-function</module>
+        <module>springboot2-redis-collection</module>
     </modules>
 
 </project>
