--- a/springboot2-redis-collection/springboot2-redis/pom.xml
+++ b/springboot2-redis-collection/springboot2-redis/pom.xml
@@ -5,49 +5,47 @@
 
     <parent>
         <groupId>com.cxp</groupId>
-        <artifactId>SpringBoot_Project</artifactId>
+        <artifactId>springboot2-redis-collection</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>springboot2-zookeeper</artifactId>
-    <name>springboot2-zookeeper</name>
+    <artifactId>springboot2-redis</artifactId>
+   
+    <name>springboot2-redis</name>
+    <packaging>jar</packaging>
     <description>Demo project for Spring Boot</description>
 
     <properties>
+        <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.curator/curator-recipes
-        对于zookeeper 3.4.x服务器版本，只有Curator 2.x.x才支持-->
-        <dependency>
-            <groupId>org.apache.curator</groupId>
-            <artifactId>curator-recipes</artifactId>
-            <version>2.12.0</version>
-        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional> true </optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.20</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.redisson/redisson-spring-boot-starter -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.11.0</version>
         </dependency>
+
     </dependencies>
 
     <build>
