--- a/springboot2-mongodb/springboot2-mongodb-basic/src/main/resources/application-dev.yml
+++ b/springboot2-mongodb/springboot2-mongodb-basic/src/main/resources/application-dev.yml
@@ -6,10 +6,11 @@ server:
 spring:
   data:
     mongodb:
-      host: 192.168.8.113
+      #host: 192.168.8.113
+      host: 127.0.0.1
       port: 27017
       username: root
-      password: '123456'
+      #password: '123456'
       database: chengxp
       #多个IP集群的配置：
       #spring.data.mongodb.uri=mongodb://user:secret@mongo1.example.com:12345,mongo2.example.com:23456/test
