--- a/springboot2-kafka-function/springboot2-kafka/pom.xml
+++ b/springboot2-kafka-function/springboot2-kafka/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>com.cxp</groupId>
-        <artifactId>SpringBoot_Project</artifactId>
+        <artifactId>springboot2-kafka-function</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
