--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
         <module>springboot2-redis-collection</module>
         <module>SpringBoot2-Nacos-Seata</module>
         <module>springboot2-web-function</module>
+        <module>springboot2-rocketmq-function</module>
     </modules>
 
 </project>
